--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 .mySlides {display:none}
 .w3-tag, .fa {cursor:pointer}
 .w3-tag {height:15px;width:15px;padding:0;margin-top:6px}
+.button{
+  background-color:none;
+  color:black;
+  border: 15px ;
+  border-radius: 20px;
+  padding: 15px 30px;
+  margin: px;
+  text-align:center;
+
+  
+}
 </style>
 <body>
 
@@ -20,19 +31,19 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
   <!-- Slideshow -->
   <div class="w3-container">
     <div class="w3-display-container mySlides">
-      <img src="coffee.jpg" style="width:100%">
+      <img src="44.jpg" style="width:100%">
       <div class="w3-display-topleft w3-container w3-padding-32">
         <span class="w3-white w3-padding-large w3-animate-bottom">Lorem ipsum</span>
       </div>
     </div>
     <div class="w3-display-container mySlides">
-      <img src="workberch.jpg" style="width:100%">
+      <img src="P1011601.jpg" style="width:100%">
       <div class="w3-display-middle w3-container w3-padding-32">
         <span class="w3-white w3-padding-large w3-animate-bottom">Klorim tipsum</span>
       </div>
     </div>
     <div class="w3-display-container mySlides">
-      <img src="sound.jpg" style="width:100%">
+      <img src="king.jpg" style="width:100%">
       <div class="w3-display-topright w3-container w3-padding-32">
         <span class="w3-white w3-padding-large w3-animate-bottom">Blorum pipsum</span>
       </div>
