--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
       </div>
     </div>
     <div class="w3-display-container mySlides">
-      <img src="P1011601.jpg" style="width:100%">
+      <img src="sound.jpg" style="width:100%">
       <div class="w3-display-middle w3-container w3-padding-32">
         <span class="w3-white w3-padding-large w3-animate-bottom">Klorim tipsum</span>
       </div>
