--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
   
 }
 </style>
-<body>
+
+<body class="w3-light-grey">
+ <section class="container header">
+      <div class="center">
+            <div class="row">
+                <section class="inner">
+                    <section class="col-lg-12 col-centered w3-center">
+                            <img class="img-responsive" alt="betagro" src="love.png" >
+                    </section>
+                    
+                    
+                </section>
+            </div>
+      </div>
+</section>
 
 
   
