--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 </section>
 
 
-  
-
   <!-- Slideshow -->
-  <div class="w3-container">
-    <div class="w3-display-container mySlides">
-      <img src="44.jpg" style="width:100%">
-      <div class="w3-display-topleft w3-container w3-padding-32">
-       
-      </div>
-    </div>
+  <div class="w3-content w3-display-container w3-light-grey">
+
+<div class="w3-display-container mySlides " >
+  <img src="44.JPG" style="width:100%" alt="ยรรยงค์" class="w3-opacity-min">
+ <div class="w3-display-middle">
+     <button class="button w3-hover-opacity ">ตลาดยรรยงค์</button>
+ </div>
+</div>
+
     <div class="w3-display-container mySlides">
       <img src="coffee.jpg" style="width:100%">
       <div class="w3-display-middle w3-container w3-padding-32">
