--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
   <!-- Slideshow -->
   <div class="w3-container">
     <div class="w3-display-container mySlides">
-      <img src="44.jpg" style="width:100%">
-      
+      <img src="44.jpg" style="width:100%" alt="ยรรยงค์" class="w3-opacity-min">
+      <div class="w3-display-middle">
+     <button class="button w3-hover-opacity ">ตลาดยรรยงค์</button>
+
+</div>
+
+
     </div>
     <div class="w3-display-container mySlides">
       <img src="coffee.jpg" style="width:100%">
