--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
     <div class="w3-display-container mySlides">
       <img src="44.jpg" style="width:100%" alt="ยรรยงค์" class="w3-opacity-min">
       <div class="w3-display-middle">
-     <button class="button w3-hover-opacity ">ตลาดยรรยงค์</button>
-
+        <a href="https://nattida3058.github.io/project2/"><button class="button w3-hover-opacity ">ตลาดยรรยงค์</button></a>
 </div>
 
 
